# dinosam

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/model/: dinov3_sam2.yaml
configs/train/: dinov3_boundary_head.yaml  smoke.yaml
docs/: autodl_runbook.md  bridge_experiments.md
scripts/: check_submodules.py  export_dinov3_boundary_maps.py  prepare_workspace.py  run_boundary_head_sam2_prompts.py  run_oracle_sam2_prompts.py  smoke_dinov3_image.py  smoke_sam2_image.py  train_dinov3_boundary_head.py
src/dinosam/: project.py  train.py
src/dinosam/data/: __init__.py  instance_tiles.py
src/dinosam/evaluation/: __init__.py  boundaries.py  masks.py
src/dinosam/features/: __init__.py  dinov3_maps.py
src/dinosam/models/: __init__.py  boundary_head.py  config.py  dinov3_wrapper.py  fusion.py  sam2_wrapper.py
src/dinosam/prompting/: __init__.py  instance_prompts.py
