[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dinosam"
version = "0.1.0"
description = "DINOv3 and SAM2 experiment workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dinosam-train = "dinosam.train:main"
